# blackwall

./: .gitgnore  .gitignore  README.md  go.work  todo.md
devices/lock-sim/: go.mod  main.go
devices/sensor-sim/: go.mod  main.go
gateway/go-api/: go.mod  main.go
gateway/rust-authz/: Cargo.toml
gateway/rust-authz/src/: main.rs
issuer/go-issuer/: go.mod  main.go
scenarios/: go.mod
scenarios/data-flow-mediation/: main.go
scenarios/delegation/: main.go
scenarios/internal/procmanager/: procmanager.go
scenarios/internal/runner/: runner.go
scenarios/orchestrator/: main.go
scenarios/owner-control/: main.go
scenarios/ownership-transfer/: main.go
scenarios/revocation/: main.go
testdata/credentials/: cred-1774819342207653187.json  cred-1774836723191074723.json  cred-1774836728193314346.json
testdata/policies/: devices.json
testdata/revocations/: revoked_ids.json
